--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,20 @@
   display: none;
 }
 
+.light body {
+  --tile: var(--neutral-100);
+}
+
+.dark body {
+  --tile: var(--neutral-900);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --tile: var(--neutral-900);
+  }
+}
+
 @layer base {
   :root {
     --chart-1: 12 76% 61%;
